kube/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hellogo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hellogo
  namespace: hellogo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: hellogo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hellogo
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellogo
  namespace: hellogo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hellogo
  template:
    metadata:
      labels:
        name: hellogo
    spec:
      serviceAccountName: hellogo-auth
      containers:
      - name: hellogo
        image: qiuguobin/hellogo
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hellogo
  namespace: hellogo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    name: hellogo
